--- a/client/index.html
+++ b/client/index.html
@@ -2,19 +2,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Stream Live Music</title>
-  <script src="index.js"></script>
+  <title>Din-O</title>
+  <script src="index.js" type="module"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <div id="chat-room" style="display: none;">
-    <div id="videos">
-      <video id="self-view" autoplay ></video>
-      <video id="remote-view" autoplay></video>
-    </div>
-  </div>
-  <button id="start">Create a show</button>
 </body>
 
 </html>
